2013-03-01  Andy Buckley  <andy.buckley@cern.ch>

	* Integrating the Cython extension build into the autotools build/install.

	* Path handling and PDF data file search error reporting fixes/improvements.

	* Add a fallback to use LHAPATH if LHAPDF_DATA_PATH is undefined. (pre-deprecated?)

	* Re-enabling Cython mapping (only the basic functionality subset).

	* Adding LHAPDF::version() function.

	* Adding configure testing for -mt versions of Boost (file)system libs.

2013-02-28  Andy Buckley  <andy.buckley@cern.ch>

	* Adding name+member and LHAPDF ID constructors for Info.

	* Moving config() out of Info.

2013-02-27  Andy Buckley  <andy.buckley@cern.ch>

	* Implemented PDF::setname() and PDF::memberid().

2013-02-26  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a lhapdf-config build assistant script.

	* Adding hacky first implementations of log-space interpolators. Separation of x and Q2 ipol seems ever more likely.

	* Started work on new LaTeX manual/paper, based on previous contribution from Ben and Marek.

	* Cleaning up defunct wrappers directories.

	* Fixing a bug in handling of nearest knot lookup for underflow x/Q2 requests.

2013-02-15  Andy Buckley  <andy.buckley@cern.ch>

	* Adding installation and usage instructions to the Doxy manual.

2013-02-13  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing install path data lookup to include the 'LHAPDF' part.

	* Fixed use of interpolation up to the last knot (in Q2, at least)
	by making KnotArray1F::x/q2below never return the last index.

2013-02-12  Andy Buckley  <andy.buckley@cern.ch>

	* Now installing pdfsets.index into the share dir.

	* Now installing lhapdf.conf into the share dir.

	* Header dependence reduction and include statement clean-up.

	* Reworking Interpolator and GridPDF interfaces to centralise
	index finding. KnotArray1F and NF are now defined as non-inner
	classes in a separate KnotArray.h header.

2013-02-11  Andy Buckley  <andy.buckley@cern.ch>
