@@ -1,5 +1,9 @@
 2013-03-01  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Fixing environment variable updating for path handling.
+
+	* Adding Cython docstrings and path/version functions.
+
 	* Integrating the Cython extension build into the autotools build/install.
 
 	* Path handling and PDF data file search error reporting fixes/improvements.
